@@ -1,3 +1,10 @@
+2002-02-25  Tim Legant  <tim@catseye.net>
+
+	* tmda-inject (main): Allow the default ACTION_OUTGOING to specify
+	options (bare=append, etc.) rather than restricting it to bare,
+	sender, dated.  This makes it behave identically to the X-TMDA
+	header.
+
 2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-rfilter (main): Support local mail delivery when the
